--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,224 @@
+// @mixin font($font_name, $file_name, $weight, $style) { // mixin подключает шрифты в fonts .scss
+
+//   @font-face {
+//   font-family: $font_name;
+//   font-display: swap;
+//   src: url("../fonts/#{$file_name}.ttf") format("ttf"), url("../fonts/#{$file_name}.woff2") format("woff2");
+//   font-weight: #{$weight};
+//   font-style: #{$style};
+//   }
+
+// }
+
+@import "variables.scss";
 @import "fonts.scss";
 
+* {
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+html {
+  box-sizing: border-box;
+  font-family: "Blogger Sans";
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+
 body {
-  background: #000;
-
+  min-width: 320px;
+  overflow-x: hidden;
 }
 
-header {
-  background: url('../img/dest/123.jpg') 0 0 no-repeat;
+.container {
+  padding: 0 25px;
 }
+
+/***********    header     ***********/
+
+.header {
+  background: url("../img/dest/globe-back-mobile@1x.jpg") no-repeat;
+  &__inner {
+    min-height: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .logo,
+  .menu {
+    padding-top: 31px;
+  }
+
+  .menu__btn {
+    width: 25px;
+    height: 3px;
+    border-radius: 1px;
+    background: #fff;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      top: -10px;
+      left: 0;
+      display: none;
+      width: 25px;
+      height: 3px;
+      background: #fff;
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: 0;
+      display: block;
+      width: 25px;
+      height: 3px;
+      background: #fff;
+    }
+  }
+
+  .menu {
+    &__btn.menu__btn-active {
+      background: transparent;
+      transition: all 0.2s ease-in-out;
+    }
+    &__btn.menu__btn-active::before {
+      transform: rotate(45deg);
+      top: 5px;
+      display: block;
+      // transition: all 0.2s ease-in-out;
+      // transition: top 0.2s linear, transform 0.2s ease-in 0.2;
+    }
+    // .menu.menu-active{
+    //   transform: rotate(45deg)
+    // }
+    &__btn.menu__btn-active::after {
+      transform: rotate(-45deg);
+      top: 5px;
+      transition: all 0.2s ease-in-out;
+    }
+  }
+  .description {
+    margin-top: 55px;
+    color: #fff;
+    text-align: center;
+    &__title {
+      font-weight: 700;
+      font-style: normal;
+      font-size: 36px;
+      line-height: 40px;
+    }
+  }
+  .traveller {
+    background: url("../img/dest/traveller-illustration-mobile@1x.png");
+    width: 192px;
+    height: 255px;
+    margin-left: 49px;
+    margin-top: 10px;
+  }
+}
+
+/***********    /header     ***********/
+
+/***********    delight     ***********/
+
+.delight {
+  background: #0c0f1f;
+
+  .connection {
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    margin-top: -20px;
+    margin-left: 25px;
+
+    &__phone-icon {
+      background: url("../img/dest/icons.svg#topmenu-phone") no-repeat;
+      height: 18px;
+      width: 18px;
+      margin-top: 12px;
+      margin-left: 11px;
+      background-color: #161c35;
+    }
+    &__mail-icon {
+      background: url("../img/dest/icons.svg#topmenu-mail") no-repeat;
+      height: 18px;
+      width: 18px;
+      margin-top: 12px;
+      margin-left: 11px;
+      background-color: #161c35;
+    }
+    &__autorization-icon {
+      background: url("../img/dest/icons.svg#topmenu-phone") no-repeat;
+      height: 18px;
+      width: 18px;
+      margin-top: 12px;
+      margin-left: 11px;
+      background-color: #161c35;
+    }
+    &__autorization a {
+      text-transform: uppercase;
+      display: block;
+      height: 100%;
+      font-size: 17px;
+      font-weight: 700;
+      line-height: 30px;
+      text-align: center;
+      margin-top: 5px;
+      color: #000;
+    }
+    .circle {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+    }
+    .long-circle {
+      width: 189px;
+      height: 40px;
+      border-radius: 20px;
+    }
+    .orange {
+      background: #ff8d30;
+    }
+    .yellow {
+      background: #ffbd30;
+    }
+    .light-yellow {
+      background: #ffd74b;
+    }
+  }
+  .citation {
+    padding-top: 50px;
+    padding-left: 50px;
+    color: #fff;
+    font-size: 16px;
+    &__text {
+      font-weight: 300;
+      line-height: 22px;
+      width: 148px;
+    }
+    &__autor {
+      padding-top: 25px;
+      padding-bottom: 113px;
+      width: 157px;
+      font-weight: 700;
+      line-height: 22px;
+    }
+  }
+}
+
+/***********    /delight     ***********/
