--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -332,20 +332,21 @@ p {
     padding-bottom: 84px;
     margin-left: 50px;
     position: relative;
-  }
-  .about__description-title {
-    padding-bottom: 23px;
-  }
-  .about__description-text {
-    color: #fff;
-  }
-  .about__description-text p:nth-child(1) {
-    width: 213px;
-  }
-  .about__description-text p:nth-child(2) {
-    padding-top: 25px;
-    font-weight: 700;
-    width: 204px;
+
+    &-title {
+      padding-bottom: 23px;
+    }
+    &-text {
+      color: #fff;
+    }
+    &-text p:nth-child(1) {
+      width: 213px;
+    }
+    &-text p:nth-child(2) {
+      padding-top: 25px;
+      font-weight: 700;
+      width: 204px;
+    }
   }
 }
 
@@ -477,6 +478,8 @@ p {
 
 /***********    /route     ***********/
 
+/***********    travelers     ***********/
+
 .travelers {
   border-radius: 0 0 30px 30px;
   background-color: #192144;
@@ -484,22 +487,57 @@ p {
     padding-top: 60px;
     margin-left: 50px;
     position: relative;
-  }
-  .travelers__description-title {
-    padding-bottom: 23px;
-    background: #000;
-  }
+    z-index: 2;
 
-  .travelers__description-text {
-    color: #fff;
+    &-title {
+      padding-bottom: 23px;
+      position: relative;
+      z-index: 2;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 132px;
+      height: 132px;
+      left: -70px;
+      top: 32px;
+      border-radius: 20px;
+      background-color: #141b3b;
+      z-index: 1;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      z-index: 1;
+      background: url("../img/dest/smolov-desktop@1x.webp") no-repeat;
+      width: 143px;
+      height: 143px;
+      top: 39px;
+      right: 25px;
+      opacity: 0.2;
+      border-radius: 20px;
+      display: block;
+      background-size: cover;
+    }
+    &-text {
+      color: #fff;
+      position: relative;
+      z-index: 2;
+    }
+    &-text p:nth-child(1) {
+      width: 217px;
+    }
+    &-text p:nth-child(2) {
+      padding-top: 25px;
+      font-weight: 700;
+      width: 204px;
+      padding-bottom: 60px;
+    }
   }
-  .travelers__description-text p:nth-child(1) {
-    width: 217px;
-  }
-  .travelers__description-text p:nth-child(2) {
-    padding-top: 25px;
-    font-weight: 700;
-    width: 204px;
-    padding-bottom: 60px;
+  .companion {
+    // &:nth-child(1) > div.companion-card__flag > ul > li:nth-child(1)
   }
 }
+/***********    /@at-root     ***********/
