--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,15 +1,3 @@
-// @mixin font($font_name, $file_name, $weight, $style) { // mixin подключает шрифты в fonts .scss
-
-//   @font-face {
-//   font-family: $font_name;
-//   font-display: swap;
-//   src: url("../fonts/#{$file_name}.ttf") format("ttf"), url("../fonts/#{$file_name}.woff2") format("woff2");
-//   font-weight: #{$weight};
-//   font-style: #{$style};
-//   }
-
-// }
-
 @import "variables.scss";
 @import "fonts.scss";
 
@@ -187,6 +175,7 @@ p {
   border-radius: 10px;
   border: none;
   position: relative;
+  cursor: pointer;
 }
 .btn::after {
   width: 15px;
@@ -194,9 +183,31 @@ p {
   background-color: #1d2e5b;
   content: "";
   position: absolute;
-  top: 25px;
+  top: 27px;
   right: 23px;
-  background: url("../img/dest/icons.svg#triangle-arrow-right") no-repeat;
+  mask-repeat: no-repeat;
+  mask-image: url("../img/dest/icons.svg#triangle-arrow-right");
+}
+
+.circle-middle {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background-color: #ffd74b;
+}
+.long-circle {
+  width: 189px;
+  height: 40px;
+  border-radius: 20px;
+}
+.orange {
+  background: #ff8d30;
+}
+.yellow {
+  background: #ffbd30;
+}
+.light-yellow {
+  background: #ffd74b;
 }
 
 /************  /Общие стили ************/
@@ -207,6 +218,8 @@ p {
   margin: 0 auto;
   width: 320px;
   background: url("../img/dest/globe-back-mobile@1x.jpg") no-repeat;
+  position: relative;
+  z-index: 7;
   &__inner {
     min-height: 100%;
     display: flex;
@@ -255,12 +268,7 @@ p {
       transform: rotate(45deg);
       top: 5px;
       display: block;
-      // transition: all 0.2s ease-in-out;
-      // transition: top 0.2s linear, transform 0.2s ease-in 0.2;
     }
-    // .menu.menu-active{
-    //   transform: rotate(45deg)
-    // }
     &__btn.menu__btn-active::after {
       transform: rotate(-45deg);
       top: 5px;
@@ -295,6 +303,9 @@ p {
   width: 320px;
   margin: 0 auto;
   background: #0c0f1f;
+  position: relative;
+  z-index: 9;
+  // padding-top: -20px;
 
   .connection {
     display: flex;
@@ -304,7 +315,8 @@ p {
     margin-left: 25px;
 
     &__phone-icon {
-      background: url("../img/dest/icons.svg#topmenu-phone") no-repeat;
+      mask-image: url("../img/dest/icons.svg#topmenu-phone");
+      mask-repeat: no-repeat;
       height: 18px;
       width: 18px;
       margin-top: 12px;
@@ -312,21 +324,15 @@ p {
       background-color: #161c35;
     }
     &__mail-icon {
-      background: url("../img/dest/icons.svg#topmenu-mail") no-repeat;
+      mask-image: url("../img/dest/icons.svg#topmenu-mail");
+      mask-repeat: no-repeat;
       height: 18px;
       width: 18px;
       margin-top: 12px;
       margin-left: 11px;
       background-color: #161c35;
     }
-    &__autorization-icon {
-      background: url("../img/dest/icons.svg#topmenu-phone") no-repeat;
-      height: 18px;
-      width: 18px;
-      margin-top: 12px;
-      margin-left: 11px;
-      background-color: #161c35;
-    }
+
     &__autorization a {
       text-transform: uppercase;
       display: block;
@@ -336,26 +342,12 @@ p {
       line-height: 30px;
       text-align: center;
       margin-top: 5px;
-      color: #000;
+      color: #161c35;
     }
     .circle {
       width: 40px;
       height: 40px;
       border-radius: 50%;
-    }
-    .long-circle {
-      width: 189px;
-      height: 40px;
-      border-radius: 20px;
-    }
-    .orange {
-      background: #ff8d30;
-    }
-    .yellow {
-      background: #ffbd30;
-    }
-    .light-yellow {
-      background: #ffd74b;
     }
   }
   .citation {
@@ -387,6 +379,8 @@ p {
   display: block;
   margin: 0 auto;
   width: 320px;
+  z-index: 12;
+  position: relative;
 
   .choice {
     width: 270px;
@@ -394,6 +388,7 @@ p {
     margin-top: -50px;
     margin-left: 25px;
     display: block;
+    z-index: 11;
 
     &__card {
       font-size: 18px;
@@ -477,6 +472,10 @@ p {
   border-radius: 0 0 30px 30px;
   background-color: #edeff6;
   padding-bottom: 10px;
+  position: relative;
+  z-index: 11;
+  margin-top: -50px;
+  padding-top: 50px;
   &__descriptrion {
     padding-top: 72px;
     margin: 0 auto;
@@ -602,6 +601,10 @@ p {
   border-radius: 0 0 30px 30px;
   background-color: #192144;
   padding-bottom: 30px;
+  position: relative;
+  z-index: 10;
+  margin-top: -50px;
+  padding-top: 50px;
   .travelers__description {
     width: 180px;
     display: block;
@@ -950,6 +953,10 @@ p {
   margin: 0 auto;
   padding-left: 50px;
   padding-right: 26px;
+  position: relative;
+  z-index: 9;
+  margin-top: -50px;
+  padding-top: 50px;
   .create-profil {
     display: flex;
     padding-top: 52px;
@@ -1035,6 +1042,10 @@ p {
   border-radius: 0 0 30px 30px;
   background-color: #192144;
   text-align: center;
+  position: relative;
+  z-index: 8;
+  margin-top: -50px;
+  padding-top: 50px;
   &__title {
     padding-top: 72px;
   }
@@ -1103,31 +1114,235 @@ p {
     padding-bottom: 32px;
     &-phone {
       display: flex;
-      justify-content: ;
+      justify-content: space-around;
       padding-bottom: 32px;
-      &::before {
-        content: "";
-        width: 45px;
-        height: 45px;
-        background-color: #121936;
-      }
-      &-icon {
-      }
-    }
-    &-mail {
-      text-transform: uppercase;
-      &::before {
-        content: "";
+      margin-right: 90px;
+      &-background {
         position: absolute;
         width: 45px;
         height: 45px;
         border-radius: 50%;
+        margin-top: -12px;
         background-color: #121936;
+        z-index: 1;
+        margin-right: 100px;
+      }
 
-        margin-left: -150px;
-        margin-top: -10px;
+      &-icon {
+        background: url("../img/dest/icons.svg#contacts-phone") no-repeat;
+        width: 18px;
+        height: 18px;
+        margin-left: 45px;
+        margin-top: 3px;
+        position: relative;
+        z-index: 2;
+      }
+    }
+    &-mail {
+      justify-content: space-around;
+      display: flex;
+      text-transform: uppercase;
+      margin-right: 35px;
+
+      &-background {
+        position: absolute;
+        width: 45px;
+        height: 45px;
+        border-radius: 50%;
+        margin-top: -15px;
+        background-color: #121936;
+        z-index: 1;
+        margin-right: 155px;
+      }
+      &-icon {
+        background: url("../img/dest/icons.svg#contacts-mail") no-repeat;
+        width: 18px;
+        height: 18px;
+        margin-left: 45px;
+        position: relative;
+        z-index: 2;
       }
     }
   }
 }
 /***********    /form     ***********/
+
+/***********    geolocation     ***********/
+.geolocation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 0 0 30px 30px;
+  background-color: #ffd74b;
+  position: relative;
+  z-index: 7;
+  margin-top: -50px;
+  padding-top: 50px;
+  .address {
+    display: flex;
+    justify-content: center;
+    &__icon {
+      mask-image: url("../img/dest/icons.svg#contacts-location");
+      mask-repeat: no-repeat;
+      width: 34px;
+      height: 52px;
+      position: relative;
+      z-index: 100;
+      margin-top: 45px;
+      margin-right: 20px;
+      background-color: #ffd74b;
+    }
+    &__background {
+      width: 45px;
+      height: 45px;
+      background-color: #121936;
+      border-radius: 50%;
+      position: absolute;
+      z-index: 8;
+      margin-top: 35px;
+      margin-right: 200px;
+    }
+
+    &__text p {
+      width: 150px;
+      margin-top: 37px;
+      margin-bottom: 35px;
+      color: #192144;
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 22px;
+      text-transform: uppercase;
+      margin-right: 30px;
+    }
+  }
+  .geolocation__btn {
+    border-radius: 10px;
+    border: 3px solid #192144;
+    background-color: transparent;
+    margin-bottom: 35px;
+  }
+}
+/***********    /geolocation     ***********/
+
+/***********    map     ***********/
+.map {
+  position: relative;
+  z-index: 5;
+  margin: 0 auto;
+  margin-top: -40px;
+  width: 320px;
+
+  &__image {
+    background: url("../img/dest/map-mobile@1x.jpg");
+    width: 320px;
+    height: 546px;
+  }
+  &__geo {
+    position: absolute;
+    background: url("../img/dest/icons.svg#map-marker") no-repeat;
+    width: 45px;
+    height: 45px;
+    top: 145px;
+    left: 138px;
+  }
+}
+/***********    /map     ***********/
+
+/***********    footer     ***********/
+
+.footer {
+  width: 320px;
+  margin: 0 auto;
+  position: relative;
+  z-index: 8;
+  margin-top: -153px;
+  border-radius: 30px 30px 0 0;
+  background-color: #ffffff;
+
+  .container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 38px;
+    .logotype {
+      background: url("../img/dest/logo-mobile-blue@1x.png") no-repeat;
+      width: 100px;
+      height: 15px;
+      padding-bottom: 41px;
+      margin: 0 auto;
+    }
+    .social {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 71px;
+      &__fb {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &-icon {
+          mask-image: url("../img/dest/icons.svg#facebook");
+          mask-repeat: no-repeat;
+          width: 18px;
+          height: 18px;
+
+          background: #000;
+        }
+      }
+      &__vk {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &-icon {
+          mask-image: url("../img/dest/icons.svg#vk");
+          mask-repeat: no-repeat;
+          width: 18px;
+          height: 18px;
+
+          background: #000;
+        }
+      }
+
+      &__inst {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &-icon {
+          mask-image: url("../img/dest/icons.svg#instagram");
+          mask-repeat: no-repeat;
+          width: 18px;
+          height: 18px;
+          background: #000;
+        }
+      }
+    }
+    .creator {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 24px;
+      position: relative;
+      &::before {
+        content: "";
+        position: absolute;
+        top: -22px;
+        left: 0;
+        width: 270px;
+        height: 1px;
+        background: #000;
+        opacity: 0.05;
+      }
+
+      &__text p {
+        font-weight: 400;
+        color: #444;
+      }
+      &__logo {
+        background: url("../img/dest/icons.svg#htmlacademy") no-repeat;
+        width: 37px;
+        height: 44px;
+      }
+    }
+  }
+}
+
+/***********    /footer     ***********/
